<package>
  <name>simulation_control_action</name>
  <version>0.0.1</version>
  <description>Simulation control action</description>
  <maintainer email="a@a.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>simulation_control_msgs</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>simulation_control_msgs</run_depend>

</package>
