<package>
  <name>simulation_control_msgs</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="a@a.com">Dawid Seredynski</maintainer>
  <description>

    simulation_control_msgs

  </description>
  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
